--- a/shop/index.html
+++ b/shop/index.html
@@ -421,7 +421,7 @@ heateor_sss_vertical_sharing{
                         <div class="et-l et-l--post">
                             <div class="et_builder_inner_content et_pb_gutters3">
 
-                                <!--<div class="et_pb_section et_pb_section_0 et_section_regular" >
+                                <div class="et_pb_section et_pb_section_0 et_section_regular" >
 
                                     <div class="et_pb_row et_pb_row_0 et_pb_row_fullwidth">
                                         <div class="et_pb_column et_pb_column_4_4 et_pb_column_0  et_pb_css_mix_blend_mode_passthrough et-last-child">
@@ -434,8 +434,7 @@ heateor_sss_vertical_sharing{
                                                     <div class="owl-carousel owl-theme"><div class="owl-slider item">
                                                         <div class="feature-slider " style="background-image: url(https://www.herbalist.ml/img/herbalist_vape_banner.jpg)">
                                                             <div class="slider-content et_pb_row">
-                                                                <h2>Encuentra todo <br>
-                                                                    lo que necesitas para las 420</h2>
+                                                                <h2>Los mejores accesorios 420</h2>
                                                             </div>
                                                         </div>
                                                     </div>
@@ -467,7 +466,7 @@ heateor_sss_vertical_sharing{
                                     </div>
 
 
-                                </div>-->
+                                </div>
 
 
                                 <div class="et_pb_section et_pb_section_1 et_pb_with_background et_section_regular" >
@@ -476,7 +475,7 @@ heateor_sss_vertical_sharing{
                                     <div class="et_pb_row et_pb_row_1">
                                         <div class="et_pb_column et_pb_column_4_4 et_pb_column_1  et_pb_css_mix_blend_mode_passthrough et-last-child">
                                             <div class="et_pb_module et_pb_text et_pb_text_1  et_pb_text_align_center et_pb_bg_layout_light">
-                                                <div class="et_pb_text_inner"><h1>La mejor Smoke Shop en Costa Rica</h1></div>
+                                                <div class="et_pb_text_inner"><h1>Smoke Shop</h1></div>
                                             </div>
                                         </div>
                                     </div>
