--- a/shop/index.html
+++ b/shop/index.html
@@ -434,7 +434,13 @@ heateor_sss_vertical_sharing{
                                                     <div class="owl-carousel owl-theme"><div class="owl-slider item">
                                                         <div class="feature-slider " style="background-image: url(https://www.herbalist.ml/img/herbalist_vape_banner.jpg)">
                                                             <div class="slider-content et_pb_row">
-                                                                <h2>Los mejores accesorios 420</h2>
+                                                                <h2>Bienvenido!</h2>
+
+                                                                <a class="more btn btn--black" target="" href="https://www.herbalist.ml/shop/">
+                                                                    <span class="text">Smoke Shop</span>
+                                                                    <span class="bg"></span>
+                                                                </a>
+
                                                             </div>
                                                         </div>
                                                     </div>
@@ -475,7 +481,7 @@ heateor_sss_vertical_sharing{
                                     <div class="et_pb_row et_pb_row_1">
                                         <div class="et_pb_column et_pb_column_4_4 et_pb_column_1  et_pb_css_mix_blend_mode_passthrough et-last-child">
                                             <div class="et_pb_module et_pb_text et_pb_text_1  et_pb_text_align_center et_pb_bg_layout_light">
-                                                <div class="et_pb_text_inner"><h1>Smoke Shop</h1></div>
+                                                <div class="et_pb_text_inner"><h1>Nuestra Smoke Shop se trata de ti. Accesorios premium pero baratos entregados discretamente a tu puerta.</h1></div>
                                             </div>
                                         </div>
                                     </div>
