--- a/privacy-policy/index.html
+++ b/privacy-policy/index.html
@@ -165,7 +165,7 @@
 
 
                             <div class="et_pb_module et_pb_image et_pb_image_0_tb_header">
-                                <a href="https://www.herbalist.ml/"><span class="et_pb_image_wrap "><img src="https://www.herbalist.ml/img/herbalist-logo.jpg?v3" alt="herbalist logo" title="logo" class="wp-image-16" /></span></a>
+                                <a href="https://www.herbalist.ml/"><span class="et_pb_image_wrap "><img src="https://www.herbalist.ml/img/full-herbalist-logo-png.png" alt="herbalist logo" title="logo" class="wp-image-16" /></span></a>
                             </div>
 
                         </div>
@@ -253,7 +253,7 @@
 
                         <div class="et_pb_column et_pb_column_1_3 et_pb_column_5_tb_header  et_pb_css_mix_blend_mode_passthrough">
                             <div class="et_pb_module et_pb_image et_pb_image_1_tb_header">
-                                <a href="https://www.herbalist.ml/"><span class="et_pb_image_wrap "><img src="https://www.herbalist.ml/img/herbalist-logo.jpg" alt="herbalist smoke shop logo" title="logo" class="wp-image-16" /></span></a>
+                                <a href="https://www.herbalist.ml/"><span class="et_pb_image_wrap "><img src="https://www.herbalist.ml/img/full-herbalist-logo-png.png" alt="herbalist smoke shop logo" title="logo" class="wp-image-16" /></span></a>
                             </div>
                         </div>
 
@@ -526,7 +526,7 @@
 
                             <a href="https://www.herbalist.ml/">
                             <span class="et_pb_image_wrap ">
-                            <img src="https://www.herbalist.ml/img/herbalist-logo.jpg" alt="herbalist smoke shop" title="logo" class="wp-image-16" />
+                            <img src="https://www.herbalist.ml/img/full-herbalist-logo-png.png" alt="herbalist smoke shop" title="logo" class="wp-image-16" />
                             </span>
                             </a>
 
