--- a/shop/cbd/index.html
+++ b/shop/cbd/index.html
@@ -361,7 +361,7 @@
                             <div class="et_pb_module et_pb_image et_pb_image_0_tb_header">
                                 <a href="https://www.herbalist.ml/">
                                     <span class="et_pb_image_wrap ">
-                                        <img src="https://www.herbalist.ml/img/herbalist-logo.jpg" alt="herbalist" title="logo" class="wp-image-16" />
+                                        <img src="https://www.herbalist.ml/img/full-herbalist-logo-png.png" alt="herbalist" title="logo" class="wp-image-16" />
                                     </span>
                                 </a>
                             </div>
@@ -426,7 +426,7 @@
 
                                 <a href="https://www.herbalist.ml/">
                                     <span class="et_pb_image_wrap ">
-                                        <img src="https://www.herbalist.ml/img/herbalist-logo.jpg?v57" alt="herbalist logo" title="logo" class="wp-image-16" />
+                                        <img src="https://www.herbalist.ml/img/full-herbalist-logo-png.png" alt="herbalist logo" title="logo" class="wp-image-16" />
                                     </span>
                                 </a>
 
