--- a/shop/cultivo/index.html
+++ b/shop/cultivo/index.html
@@ -205,7 +205,7 @@
                             <div class="et_pb_module et_pb_image et_pb_image_0_tb_header">
                                 <a href="https://www.herbalist.ml/">
                                     <span class="et_pb_image_wrap ">
-                                        <img src="https://www.herbalist.ml/img/herbalist-logo.jpg" alt="smoke shop logo" title="logo" class="wp-image-16" />
+                                        <img src="https://www.herbalist.ml/img/full-herbalist-logo-png.png" alt="smoke shop logo" title="logo" class="wp-image-16" />
                                     </span>
                                 </a>
                             </div>
@@ -270,7 +270,7 @@
 
                                 <a href="https://www.herbalist.ml/">
                                     <span class="et_pb_image_wrap ">
-                                        <img src="https://www.herbalist.ml/img/herbalist-logo.jpg?v57" alt="herbalist logo" title="logo" class="wp-image-16" />
+                                        <img src="https://www.herbalist.ml/img/full-herbalist-logo-png.png" alt="herbalist logo" title="logo" class="wp-image-16" />
                                     </span>
                                 </a>
 
