--- a/shop/index.html
+++ b/shop/index.html
@@ -192,7 +192,7 @@ heateor_sss_vertical_sharing{
 
 
                             <div class="et_pb_module et_pb_image et_pb_image_0_tb_header">
-                                <a href="https://www.herbalist.ml/"><span class="et_pb_image_wrap "><img src="https://www.herbalist.ml/img/herbalist-logo.jpg" alt="herbalist smoke shop" title="logo" class="wp-image-16" /></span></a>
+                                <a href="https://www.herbalist.ml/"><span class="et_pb_image_wrap "><img src="https://www.herbalist.ml/img/full-herbalist-logo-png.png" alt="herbalist smoke shop" title="logo" class="wp-image-16" /></span></a>
                             </div>
 
                         </div>
@@ -278,7 +278,7 @@ heateor_sss_vertical_sharing{
 
                         <div class="et_pb_column et_pb_column_1_3 et_pb_column_5_tb_header  et_pb_css_mix_blend_mode_passthrough">
                             <div class="et_pb_module et_pb_image et_pb_image_1_tb_header">
-                                <a href="https://www.herbalist.ml/"><span class="et_pb_image_wrap "><img src="https://www.herbalist.ml/img/herbalist-logo.jpg" alt="herbalist smoke shop logo" title="logo" class="wp-image-16" /></span></a>
+                                <a href="https://www.herbalist.ml/"><span class="et_pb_image_wrap "><img src="https://www.herbalist.ml/img/full-herbalist-logo-png.png" alt="herbalist smoke shop logo" title="logo" class="wp-image-16" /></span></a>
                             </div>
                         </div>
 
@@ -1476,7 +1476,7 @@ Cuando se trata de intentar animar una fiesta o socializar con tus amigos, no ha
 
                             <a href="https://www.herbalist.ml/">
                             <span class="et_pb_image_wrap ">
-                            <img src="https://www.herbalist.ml/img/herbalist-logo.jpg" alt="herbalist smoke shop" title="logo" class="wp-image-16" />
+                            <img src="https://www.herbalist.ml/img/full-herbalist-logo-png.png" alt="herbalist smoke shop" title="logo" class="wp-image-16" />
                             </span>
                             </a>
 
