--- a/shop/picadoras/index.html
+++ b/shop/picadoras/index.html
@@ -204,7 +204,7 @@
                             <div class="et_pb_module et_pb_image et_pb_image_0_tb_header">
                                 <a href="https://www.herbalist.ml/">
                                     <span class="et_pb_image_wrap ">
-                                        <img src="https://www.herbalist.ml/img/herbalist-logo.jpg" alt="herbalist smoke shop" title="logo" class="wp-image-16" />
+                                        <img src="https://www.herbalist.ml/img/full-herbalist-logo-png.png" alt="herbalist smoke shop" title="logo" class="wp-image-16" />
                                     </span>
                                 </a>
                             </div>
@@ -269,7 +269,7 @@
 
                                 <a href="https://www.herbalist.ml/">
                                     <span class="et_pb_image_wrap ">
-                                        <img src="https://www.herbalist.ml/img/herbalist-logo.jpg?v57" alt="" title="logo" class="wp-image-16" />
+                                        <img src="https://www.herbalist.ml/img/full-herbalist-logo-png.png" alt="" title="logo" class="wp-image-16" />
                                     </span>
                                 </a>
 
