--- a/shop/pipas/index.html
+++ b/shop/pipas/index.html
@@ -1218,25 +1218,20 @@ Apisonadora Marley Natural Rise Up</a>&nbsp;</span>- Disfrutará golpeando con e
                         <div class="et_pb_row et_pb_row_4_tb_footer foot-icons">
                             <div class="et_pb_column et_pb_column_4_4 et_pb_column_8_tb_footer  et_pb_css_mix_blend_mode_passthrough et-last-child">
 
-
-                                <div class="et_pb_module et_pb_text et_pb_text_9_tb_footer inline-block  et_pb_text_align_left et_pb_bg_layout_light">
-
-
-                                    <div class="et_pb_text_inner"><p><a href="https://www.herbalist.ml/privacy-policy/" target="_blank">Política de privacidad</a></p></div>
-                                </div><div class="et_pb_module et_pb_text et_pb_text_10_tb_footer inline-block  et_pb_text_align_left et_pb_bg_layout_light">
-
-
-                                <div class="et_pb_text_inner"><p>© 2022 Herbalist® Smoke Shop.</p></div>
+                                <div class="et_pb_module et_pb_text et_pb_text_10_tb_footer inline-block  et_pb_text_align_left et_pb_bg_layout_light">
+                                <div class="et_pb_text_inner">
+                                    <p>© Herbalist Smoke Shop 2022 | ® Todos los Derechos Reservados.<hr></p>
+                                    <p>🇨🇷 Tranquilino Sáenz Flores, Heredia, Costa Rica.</p>
+                                </div>
                             </div>
 
                                 <div class="et_pb_module et_pb_text et_pb_text_11_tb_footer inline-block  et_pb_text_align_left et_pb_bg_layout_light">
-                                    <div class="et_pb_text_inner"><p><a href="mailto:shop@herbalist.ml">shop@herbalist.ml</a></p>
+                                    <div class="et_pb_text_inner">
+                                        <a href="mailto:shop@herbalist.ml" target="_blank">shop@herbalist.ml</a> <a href="https://www.herbalist.ml/privacy-policy/">Política de Privacidad</a> <a href="https://www.ripen.ga/" target="_blank">Powered by <b>RIPEN</b> </a>
                                     </div>
                                 </div>
 
                             </div>
-
-
                         </div>
 
 
