--- a/index.html
+++ b/index.html
@@ -819,7 +819,7 @@ Cuando se trata de intentar animar una fiesta o socializar con tus amigos, no ha
                             </div>-->
 
                             <div class="et_pb_module et_pb_image et_pb_image_1_tb_footer">
-                                <a href="https://wa.me/50671217851/?text=Por favor escríba aquí su consulta:)" target="_blank" class="custom-a-social">
+                                <a href="https://wa.me/50671217851/?text=" target="_blank" class="custom-a-social">
                                     <i class="fab fa-whatsapp sap-icon"></i>
                                 </a>
                             </div>
