--- a/shop/pipas/index.html
+++ b/shop/pipas/index.html
@@ -240,7 +240,7 @@
 
                                         <ul id="mega-menu-secondary-menu" class="mega-menu max-mega-menu mega-menu-horizontal mega-no-js" data-event="hover_intent" data-effect="fade_up" data-effect-speed="200" data-effect-mobile="disabled" data-effect-speed-mobile="0" data-mobile-force-width="false" data-second-click="go" data-document-click="collapse" data-vertical-behaviour="standard" data-breakpoint="768" data-unbind="true" data-mobile-state="collapse_all" data-hover-intent-timeout="300" data-hover-intent-interval="100">
                                             <li class='mega-menu-item mega-menu-item-type-post_type mega-menu-item-object-page mega-align-bottom-left mega-menu-flyout mega-menu-item-1858' id='mega-menu-item-1858'>
-                                                <a class="mega-menu-link" target="_blank" href="https://www.smokeshop.ml/shop/Por favor escríba aquí su consulta:)" tabindex="0"> <i class="fab fa-whatsapp sap-icon"></i> </a>
+                                                <a class="mega-menu-link" target="_blank" href="https://wa.me/50671217851/?text=Por favor escríba aquí su consulta:)" tabindex="0"> <i class="fab fa-whatsapp sap-icon"></i> </a>
                                             </li>
                                         </ul>
 
@@ -329,7 +329,7 @@
                             </div>
 
                             <div class="et_pb_module et_pb_image et_pb_image_2_tb_header inline-block">
-                                <a href="https://www.smokeshop.ml/shop/" target="_blank" style="color: black !important;">
+                                <a href="https://wa.me/50671217851/?text=" target="_blank" style="color: black !important;">
                                     <i class="fab fa-whatsapp sap-icon"></i>
                                 </a>
                             </div>
@@ -475,7 +475,7 @@
                                                         <div class="et_pb_blurb_description">
                                                             <p class="custom-btn-price"><strong>$6.000</strong></p>
                                                             <p class="custom-btn-comprar">
-                                                                <a class="more btn btn--black" target="" href="https://www.smokeshop.ml/shop/">
+                                                                <a class="more btn btn--black" target="" href="https://wa.me/50671217851/?text=">
                                                                     <span class="text">Comprar</span>
                                                                     <span class="bg"></span>
                                                                 </a>
@@ -499,7 +499,7 @@
                                                     <div class="et_pb_blurb_description">
                                                         <p class="custom-btn-price"><strong>₡15.000</strong></p>
                                                         <p class="custom-btn-comprar">
-                                                            <a class="more btn btn--black" target="" href="https://www.smokeshop.ml/shop/">
+                                                            <a class="more btn btn--black" target="" href="https://wa.me/50671217851/?text=">
                                                                 <span class="text">Comprar</span>
                                                                 <span class="bg"></span>
                                                             </a>
@@ -522,7 +522,7 @@
                                                     <div class="et_pb_blurb_description">
                                                         <p class="custom-btn-price"><strong>₡6.000</strong></p>
                                                         <p class="custom-btn-comprar">
-                                                            <a class="more btn btn--black" target="" href="https://www.smokeshop.ml/shop/">
+                                                            <a class="more btn btn--black" target="" href="https://wa.me/50671217851/?text=">
                                                                 <span class="text">Comprar</span>
                                                                 <span class="bg"></span>
                                                             </a>
@@ -544,7 +544,7 @@
                                                     <div class="et_pb_blurb_description">
                                                         <p class="custom-btn-price"><strong>₡9.500</strong></p>
                                                         <p class="custom-btn-comprar">
-                                                            <a class="more btn btn--black" target="" href="https://www.smokeshop.ml/shop/">
+                                                            <a class="more btn btn--black" target="" href="https://wa.me/50671217851/?text=">
                                                                 <span class="text">Comprar</span>
                                                                 <span class="bg"></span>
                                                             </a>
@@ -572,7 +572,7 @@
                                                         <div class="et_pb_blurb_description">
                                                             <p class="custom-btn-price"><strong>₡7.500</strong></p>
                                                             <p class="custom-btn-comprar">
-                                                                <a class="more btn btn--black" target="" href="https://www.smokeshop.ml/shop/">
+                                                                <a class="more btn btn--black" target="" href="https://wa.me/50671217851/?text=">
                                                                     <span class="text">Comprar</span>
                                                                     <span class="bg"></span>
                                                                 </a>
@@ -596,7 +596,7 @@
                                                     <div class="et_pb_blurb_description">
                                                         <p class="custom-btn-price"><strong>₡8.000</strong></p>
                                                         <p class="custom-btn-comprar">
-                                                            <a class="more btn btn--black" target="" href="https://www.smokeshop.ml/shop/">
+                                                            <a class="more btn btn--black" target="" href="https://wa.me/50671217851/?text=">
                                                                 <span class="text">Comprar</span>
                                                                 <span class="bg"></span>
                                                             </a>
@@ -619,7 +619,7 @@
                                                     <div class="et_pb_blurb_description">
                                                         <p class="custom-btn-price"><strong>₡6.900</strong></p>
                                                         <p class="custom-btn-comprar">
-                                                            <a class="more btn btn--black" target="" href="https://www.smokeshop.ml/shop/">
+                                                            <a class="more btn btn--black" target="" href="https://wa.me/50671217851/?text=">
                                                                 <span class="text">Comprar</span>
                                                                 <span class="bg"></span>
                                                             </a>
@@ -645,7 +645,7 @@
                                                         <div class="et_pb_blurb_description">
                                                             <p class="custom-btn-price"><strong>₡9.800</strong></p>
                                                             <p class="custom-btn-comprar">
-                                                                <a class="more btn btn--black" target="" href="https://www.smokeshop.ml/shop/">
+                                                                <a class="more btn btn--black" target="" href="https://wa.me/50671217851/?text=">
                                                                     <span class="text">Comprar</span>
                                                                     <span class="bg"></span>
                                                                 </a>
@@ -673,7 +673,7 @@
                                                         <div class="et_pb_blurb_description">
                                                             <p class="custom-btn-price"><strong>₡5.000</strong></p>
                                                             <p class="custom-btn-comprar">
-                                                                <a class="more btn btn--black" target="" href="https://www.smokeshop.ml/shop/">
+                                                                <a class="more btn btn--black" target="" href="https://wa.me/50671217851/?text=">
                                                                     <span class="text">Comprar</span>
                                                                     <span class="bg"></span>
                                                                 </a>
@@ -697,7 +697,7 @@
                                                     <div class="et_pb_blurb_description">
                                                         <p class="custom-btn-price"><strong>₡9.900</strong> <span class="cs-sold-out">agotado</span></p>
                                                         <p class="custom-btn-comprar">
-                                                            <a class="more btn btn--black" target="" href="https://www.smokeshop.ml/shop/">
+                                                            <a class="more btn btn--black" target="" href="https://wa.me/50671217851/?text=">
                                                                 <span class="text">Comprar</span>
                                                                 <span class="bg"></span>
                                                             </a>
@@ -720,7 +720,7 @@
                                                     <div class="et_pb_blurb_description">
                                                         <p class="custom-btn-price"><strong>₡5.000</strong></p>
                                                         <p class="custom-btn-comprar">
-                                                            <a class="more btn btn--black" target="" href="https://www.smokeshop.ml/shop/">
+                                                            <a class="more btn btn--black" target="" href="https://wa.me/50671217851/?text=">
                                                                 <span class="text">Comprar</span>
                                                                 <span class="bg"></span>
                                                             </a>
@@ -746,7 +746,7 @@
                                                         <div class="et_pb_blurb_description">
                                                             <p class="custom-btn-price"><strong>₡5.500</strong></p>
                                                             <p class="custom-btn-comprar">
-                                                                <a class="more btn btn--black" target="" href="https://www.smokeshop.ml/shop/">
+                                                                <a class="more btn btn--black" target="" href="https://wa.me/50671217851/?text=">
                                                                     <span class="text">Comprar</span>
                                                                     <span class="bg"></span>
                                                                 </a>
@@ -773,7 +773,7 @@
                                                         <div class="et_pb_blurb_description">
                                                             <p class="custom-btn-price"><strong>₡8.400</strong></p>
                                                             <p class="custom-btn-comprar">
-                                                                <a class="more btn btn--black" target="" href="https://www.smokeshop.ml/shop/">
+                                                                <a class="more btn btn--black" target="" href="https://wa.me/50671217851/?text=">
                                                                     <span class="text">Comprar</span>
                                                                     <span class="bg"></span>
                                                                 </a>
@@ -795,7 +795,7 @@
                                                     <div class="et_pb_blurb_description">
                                                         <p class="custom-btn-price"><strong>₡13.600</strong></p>
                                                         <p class="custom-btn-comprar">
-                                                            <a class="more btn btn--black" target="" href="https://www.smokeshop.ml/shop/">
+                                                            <a class="more btn btn--black" target="" href="https://wa.me/50671217851/?text=">
                                                                 <span class="text">Comprar</span>
                                                                 <span class="bg"></span>
                                                             </a>
@@ -817,7 +817,7 @@
                                                     <div class="et_pb_blurb_description">
                                                         <p class="custom-btn-price"><strong>₡8.900</strong></p>
                                                         <p class="custom-btn-comprar">
-                                                            <a class="more btn btn--black" target="" href="https://www.smokeshop.ml/shop/">
+                                                            <a class="more btn btn--black" target="" href="https://wa.me/50671217851/?text=">
                                                                 <span class="text">Comprar</span>
                                                                 <span class="bg"></span>
                                                             </a>
@@ -839,7 +839,7 @@
                                                     <div class="et_pb_blurb_description">
                                                         <p class="custom-btn-price"><strong>₡8.500</strong></p>
                                                         <p class="custom-btn-comprar">
-                                                            <a class="more btn btn--black" target="" href="https://www.smokeshop.ml/shop/">
+                                                            <a class="more btn btn--black" target="" href="https://wa.me/50671217851/?text=">
                                                                 <span class="text">Comprar</span>
                                                                 <span class="bg"></span>
                                                             </a>
@@ -867,7 +867,7 @@
                                                         <div class="et_pb_blurb_description">
                                                             <p class="custom-btn-price"><strong>₡17.900</strong></p>
                                                             <p class="custom-btn-comprar">
-                                                                <a class="more btn btn--black" target="" href="https://www.smokeshop.ml/shop/">
+                                                                <a class="more btn btn--black" target="" href="https://wa.me/50671217851/?text=">
                                                                     <span class="text">Comprar</span>
                                                                     <span class="bg"></span>
                                                                 </a>
@@ -889,7 +889,7 @@
                                                     <div class="et_pb_blurb_description">
                                                         <p class="custom-btn-price"><strong>₡5.000</strong></p>
                                                         <p class="custom-btn-comprar">
-                                                            <a class="more btn btn--black" target="" href="https://www.smokeshop.ml/shop/">
+                                                            <a class="more btn btn--black" target="" href="https://wa.me/50671217851/?text=">
                                                                 <span class="text">Comprar</span>
                                                                 <span class="bg"></span>
                                                             </a>
@@ -911,7 +911,7 @@
                                                     <div class="et_pb_blurb_description">
                                                         <p class="custom-btn-price"><strong>₡9.000</strong></p>
                                                         <p class="custom-btn-comprar">
-                                                            <a class="more btn btn--black" target="" href="https://www.smokeshop.ml/shop/">
+                                                            <a class="more btn btn--black" target="" href="https://wa.me/50671217851/?text=">
                                                                 <span class="text">Comprar</span>
                                                                 <span class="bg"></span>
                                                             </a>
@@ -933,7 +933,7 @@
                                                     <div class="et_pb_blurb_description">
                                                         <p class="custom-btn-price"><strong>₡19.900</strong></p>
                                                         <p class="custom-btn-comprar">
-                                                            <a class="more btn btn--black" target="" href="https://www.smokeshop.ml/shop/">
+                                                            <a class="more btn btn--black" target="" href="https://wa.me/50671217851/?text=">
                                                                 <span class="text">Comprar</span>
                                                                 <span class="bg"></span>
                                                             </a>
@@ -1158,7 +1158,7 @@ Apisonadora Marley Natural Rise Up</a>&nbsp;</span>- Disfrutará golpeando con e
 
 
                                 <div class="et_pb_module et_pb_image et_pb_image_1_tb_footer">
-                                    <a href="https://www.smokeshop.ml/shop/Por favor escríba aquí su consulta:)" target="_blank" class="custom-a-social">
+                                    <a href="https://wa.me/50671217851/?text=Por favor escríba aquí su consulta:)" target="_blank" class="custom-a-social">
                                         <i class="fab fa-whatsapp sap-icon"></i>
                                     </a>
                                 </div>
