--- a/privacy-policy/index.html
+++ b/privacy-policy/index.html
@@ -571,7 +571,7 @@
                             <div class="et_pb_module et_pb_text et_pb_text_6_tb_footer inline-block  et_pb_text_align_left et_pb_bg_layout_light">
                                 <div class="et_pb_text_inner">
                                     <p>© 2022 Herbalist® Smoke Shop | Todos los Derechos Reservados.<hr></p>
-                                    <p><i class="fa fa-map-marker" aria-hidden="true"></i> Tranquilino Sáenz Flores, Heredia Costa Rica.</p>
+                                    <p>📍 Barrio Escalante, San José, Costa Rica.</p>
 
 
                                 </div>
